tests/snapshots/snapshots_ui__error_screen.snap
---
source: tests/snapshots_ui.rs
expression: "render(&app, 60, 12)"
---
unexpected byte 0x7d at 5:1

  3 │     2
  4 │   ,
  5 │ }
    │ ^
  6 │

press any key to exit
