tests/snapshots/snapshots_ui__filter_prompt.snap
---
source: tests/snapshots_ui.rs
expression: "render(&app, 60, 12)"
---
▎▾ [30]                       ┌ preview ───────────────────┐
 │ ▸ [0]: {3}                 │[                           │
 │ ▸ [1]: {3}                 │  {                         │
 │ ▸ [2]: {3}                 │    "id": 0,                │
 │ ▸ [3]: {3}                 │    "name": "user0",        │
 │ ▸ [4]: {3}                 │    "ok": true              │
 │ ▸ [5]: {3}                 │  },                        │
 │ ▸ [6]: {3}                 │…                           │
 │ ▸ [7]: {3}                 └────────────────────────────┘
────────────────────────────────────────────────────────────
filter> .id > 2
 ⏎ run  esc cancel
