tests/snapshots/snapshots_ui__loading_gauge.snap
---
source: tests/snapshots_ui.rs
expression: "render(&app, 60, 7)"
---


┌──────────────────────────────────────────────────────────┐
│███████████████Indexing 40.0 MB / 100.0 MB                │
└──────────────────────────────────────────────────────────┘
