tests/snapshots/snapshots_ui__narrow_terminal.snap
---
source: tests/snapshots_ui.rs
expression: "render(&app, 30, 8)"
---
▼ {3}
  ▼ meta: {2}
      version: "1.2"
      ok: true
  ▶ users: [1500]
──────────────────────────────
.meta  object …B  6,006 values
 j/k move  h/l fold  ? more
