tests/snapshots/snapshots_ui__tree_and_preview.snap
---
source: tests/snapshots_ui.rs
expression: "render(&app, 70, 10)"
---
▼ {3}                              ┌ preview ────────────────────────┐
  ▼ meta: {2}                      │{                                │
      version: "1.2"               │  "version": "1.2",              │
      ok: true                     │  "ok": true                     │
  ▶ users: [1500]                  │}                                │
    note: null                     │                                 │
                                   │                                 │
                                   │                                 │
                                   └─────────────────────────────────┘
.meta  object                              JSON  36.4 kB  6,006 values
