tests/snapshots/snapshots_ui__tree_with_buckets_and_status.snap
---
source: tests/snapshots_ui.rs
expression: "render(&app, 60, 12)"
---
▼ {3}
  ▼ meta: {2}
      version: "1.2"
      ok: true
  ▼ users: [1500]
    ▶ [0..1023]
    ▶ [1024..1499]
    note: null



.users  array                    JSON  36.4 kB  6,006 values
